[package]
name = "kcd_rename"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.11", features = ["derive"] }
clap-stdin = "0.3.0"
deku = "0.16.0"
glob = "0.3.1"
indicatif = "0.17.7"
patternscan = "1.2.0"
rayon = "1.8.0"
regex = "1.10.2"
